@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="manager" class="edu.mcw.rgd.dataload.ImportManager">
-        <property name="version" value="phenotype-annotation-pipeline  -- build Jan 23, 2026" />
+        <property name="version" value="phenotype-annotation-pipeline  -- build Feb 09, 2026" />
 	</bean>
 
     <bean id="mgiPhenotype" class="edu.mcw.rgd.dataload.MGIPhenotypeImporter">
@@ -15,9 +15,9 @@
     </bean>
 
     <bean id="hpoPhenotype" class="edu.mcw.rgd.dataload.HPOPhenotypeImporter">
-        <property name="version" value="HPOPhenotypeImporter  -- build Oct 23, 2025" />
-        <property name="fileURL"       value="https://github.com/obophenotype/human-phenotype-ontology/releases/download/v2025-10-22/genes_to_phenotype.txt" />
-        <property name="phenotypeFile" value="https://github.com/obophenotype/human-phenotype-ontology/releases/download/v2025-10-22/phenotype.hpoa" />
+        <property name="version" value="HPOPhenotypeImporter  -- build Feb 09, 2026" />
+        <property name="fileURL"       value="https://github.com/obophenotype/human-phenotype-ontology/releases/download/v2026-01-08/genes_to_phenotype.txt" />
+        <property name="phenotypeFile" value="https://github.com/obophenotype/human-phenotype-ontology/releases/download/v2026-01-08/phenotype.hpoa" />
         <property name="workDirectory" value="data" />
         <property name="owner" value="66" />
         <property name="dataSource" value="HPO" />
